dynamic remote proxy

--- a/.env.copy
+++ b/.env.copy
@@ -1,6 +1,8 @@
-HTTPS_ONLY=false
 HOST=127.0.0.1
 PORT=8000
-REMOTE_PROXY_HOST=12.13.14.15
-REMOTE_PROXY_PORT=12345
+API_HOST=127.0.0.1
+API_PORT=6666
+# Internal usage
+HTTPS_ONLY=false
 DISABLE_LOGGING=false
+API_PATH=./src/forward/api/
