--- a/.env.copy
+++ b/.env.copy
@@ -1,8 +1,21 @@
-HOST=127.0.0.1
-PORT=8000
+# Local proxy
+PROXY_HOST=127.0.0.1
+PROXY_PORT=8000
+
+# Local api server for configuring remote (chain) proxy
 API_HOST=127.0.0.1
 API_PORT=6666
-# Internal usage
-HTTPS_ONLY=false
+
+# Initial proxy settings
+# USERNAME+PASSWORD completely optional
+# HOST+PORT required to enable proxy chaining 
+INITIAL_REMOTE_PROXY_USERNAME=
+INITIAL_REMOTE_PROXY_PASSWORD=
+INITIAL_REMOTE_PROXY_HOST=
+INITIAL_REMOTE_PROXY_PORT=
+
+# Only proxy https requests
+PROXY_HTTPS_ONLY=false
+
+# Recommended for prod usage
 DISABLE_LOGGING=false
-API_PATH=./src/forward/api/
